Use faster, but less information methods to calculate memory dumps on macOS.

Switch to use mach_vm_region(TOP_INFO) and mach_vm_region(BASIC_INFO) instead of
mach_vm_region_recurse(). While the latter provides more information, both on
submaps and on swapped/clean pages, it's two order of magnitudes slower.
Attempting to take a memory dump with ~50 renderer renderers my machine unusable
for over a minute.

BUG=713481

Review-Url: https://codereview.chromium.org/2826123004
Cr-Commit-Position: refs/heads/master@{#466417}

Former-commit-id: 12531f29074985a71e18f60a2e8ea79b4f24314c